configs : lavender : cleanup & optimize
Signed-off-by: sohamxda7 <sensoham135@gmail.com>

--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.263 Kernel Configuration
+# Linux/arm64 4.4.266 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -49,7 +49,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Predator-Stormbreaker-X4.4"
+CONFIG_LOCALVERSION="-Predator-Stormbreaker-X4.5"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME=""
 CONFIG_SWAP=y
@@ -477,7 +477,7 @@ CONFIG_PROCESS_RECLAIM=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
-CONFIG_UNMAP_KERNEL_AT_EL0=y
+# CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
@@ -492,7 +492,9 @@ CONFIG_SETEND_EMULATION=y
 # CONFIG_ARM64_PAN is not set
 # CONFIG_ARM64_LSE_ATOMICS is not set
 # CONFIG_ARM64_UAO is not set
-# CONFIG_RANDOMIZE_BASE is not set
+CONFIG_RELOCATABLE=y
+CONFIG_RANDOMIZE_BASE=y
+CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
 #
 # Boot options
@@ -576,7 +578,6 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 # CPU Frequency scaling
 #
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_TIMES=y
@@ -1779,7 +1780,7 @@ CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_NT36xxx=y
+CONFIG_TOUCHSCREEN_NVT_F7A=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_TCM=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_I2C=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_TCM_SPI is not set
@@ -1841,7 +1842,6 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SX8654 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
-CONFIG_TOUCHSCREEN_NVT_F7A=y
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
 # CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 # CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
@@ -3159,6 +3159,7 @@ CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 # CONFIG_HID_MONTEREY is not set
 CONFIG_HID_MULTITOUCH=y
+# CONFIG_HID_NINTENDO is not set
 # CONFIG_HID_NTRIG is not set
 # CONFIG_HID_ORTEK is not set
 # CONFIG_HID_PANTHERLORD is not set
@@ -4480,19 +4481,16 @@ CONFIG_SDFAT_DELAYED_META_DIRTY=y
 CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
 CONFIG_SDFAT_DEFAULT_CODEPAGE=437
 CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
+# CONFIG_SDFAT_CHECK_RO_ATTR is not set
 CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
 CONFIG_SDFAT_VIRTUAL_XATTR=y
 CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:vfat:s0"
-CONFIG_SDFAT_SUPPORT_STLOG=y
 CONFIG_SDFAT_DEBUG=y
+# CONFIG_SDFAT_DBG_IOCTL is not set
 CONFIG_SDFAT_DBG_MSG=y
+# CONFIG_SDFAT_DBG_BUGON is not set
 CONFIG_SDFAT_STATISTICS=y
 CONFIG_SDFAT_UEVENT=y
-# CONFIG_SDFAT_CHECK_RO_ATTR is not set
-# CONFIG_SDFAT_DBG_IOCTL is not set
-# CONFIG_SDFAT_DBG_BUGON is not set
-# CONFIG_EXFAT_DEBUG is not set
-# CONFIG_EXFAT_UEVENT is not set
 # CONFIG_NTFS_FS is not set
 
 #
